// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders with title 1`] = `
<div
  class="card-modern overflow-hidden animate-fade-in w-full text-left  "
>
  <div
    class="flex items-start justify-between gap-4 border-b border-slate-100 px-6 py-4 dark:border-slate-800"
  >
    <div
      class="min-w-0"
    >
      <h3
        class="text-heading-3 text-slate-900 dark:text-white"
      >
        Test Basligi
      </h3>
    </div>
  </div>
  <div
    class="px-6 py-5"
  >
    <p>
      İçerik
    </p>
  </div>
</div>
`;

exports[`Card > renders with title and action 1`] = `
<div
  class="card-modern overflow-hidden animate-fade-in w-full text-left  "
>
  <div
    class="flex items-start justify-between gap-4 border-b border-slate-100 px-6 py-4 dark:border-slate-800"
  >
    <div
      class="min-w-0"
    >
      <h3
        class="text-heading-3 text-slate-900 dark:text-white"
      >
        Ayarlar
      </h3>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
    >
      <button>
        Kaydet
      </button>
    </div>
  </div>
  <div
    class="px-6 py-5"
  >
    <p>
      Form alanlari
    </p>
  </div>
</div>
`;

exports[`Card > renders without title 1`] = `
<div
  class="card-modern overflow-hidden animate-fade-in w-full text-left  "
>
  <div
    class="px-6 py-5"
  >
    <p>
      Sadece içerik
    </p>
  </div>
</div>
`;
